# nitro-dispatch

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: publishing.yml  test.yml
examples/: advanced_features.py  advanced_usage.py  basic_usage.py  discovery_example.py  sample_plugin.py
nitro_dispatch/: __init__.py
nitro_dispatch/core/: __init__.py  exceptions.py  hook_registry.py  plugin_base.py  plugin_manager.py
nitro_dispatch/utils/: __init__.py  decorators.py
tests/: __init__.py  test_decorators.py  test_exceptions.py  test_hook_registry.py  test_integration.py  test_plugin_base.py  test_plugin_manager.py
